--- a/client/src/components/login/Login.css
+++ b/client/src/components/login/Login.css
@@ -4,27 +4,31 @@
     box-sizing: border-box;
 }
 
-body {
+html,body {
     font-family: Arial, sans-serif;
-    background-color: #f0f2f5;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
+    /* background-color: #f0f2f5; */
+    /* display: flex; */
+    /* flex-direction: column; */
+    /* justify-content: center; */
+    /* align-items: center; */
     min-height: 100%;
     width: 100%;
+    height: 100%;
     margin: 0;
+    
 }
 
 .loginpage {
     display: flex;
-    justify-content: space-between;
+    justify-content: center;
     align-items: center;
     width: 100%;
+    /* height: 100vh; */
     max-width: 1400px;
-    margin: auto;
+    margin: 0;
     padding: 20px;
     flex-wrap: wrap;
+    /* background-color: #5C5470; */
 }
 
 .leftContainer {
@@ -32,6 +36,7 @@ body {
     padding: 20px;
     margin-right: 200px;
     margin-top: 1px;
+    margin-left:200px;
 }
 
 .leftContainer h1 {
@@ -55,6 +60,7 @@ body {
     max-width: 600px;
     margin: 20px;
     margin-top: 50px;
+    margin-bottom: 100px;
     display: flex;
     flex-direction: column;
     gap: 15px;
@@ -97,6 +103,56 @@ body {
     color: #606770;
     font-size: 13px;
 }
+
+/* Add this to your Login.css file */
+
+.vehicleOption {
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+}
+
+.vehicleTitle {
+    font-size: 18px;
+    font-weight: 600;
+    color: #06254c;
+}
+
+.vehicles {
+    display: flex;
+    flex-direction: row;
+    gap: 20px;
+}
+
+.vehicles div {
+    display: flex;
+    align-items: center;
+    gap: 8px;
+}
+
+.vehicles label {
+    font-size: 16px;
+    color: #606770;
+}
+
+.vehicles input[type='radio'] {
+    appearance: none;
+    -webkit-appearance: none;
+    width: 16px;
+    height: 16px;
+    border: 2px solid #606770;
+    border-radius: 50%;
+    outline: none;
+    cursor: pointer;
+}
+
+.vehicles input[type='radio']:checked {
+    background-color: #06254c;
+    border-color: #06254c;
+}
+
+
+
 
 .checkboxInput {
     display: flex;
@@ -335,7 +391,7 @@ body {
         color: white;
         text-align: center;
         padding: 20px 0;
-        position: relative;
+        position: fixed;
         bottom: 0;
         height: 16.67vh;
         left: 0;
@@ -377,9 +433,10 @@ body {
     color: white;
     text-align: center;
     padding: 20px 0;
-    position: relative;
+    position: fixed;
     bottom: 0;
-    height: 16.67vh;
+    margin: 0;
+    height: 16vh;
     /* 1/6th of the screen height */
 }
 
