--- a/client/src/components/home/HomePage.css
+++ b/client/src/components/home/HomePage.css
@@ -4,89 +4,42 @@ body {
     font-family: Arial, sans-serif;
 }
 
-.navbar{
-    display: flex;
-    justify-content: space-around;
-    padding: 16px;
-    box-shadow: 0 1px 3px -2px black;
-    width: 100%;
-    height: 150px;
-    background:rgb(7, 7, 57);
-    /* background-color: #023047; */
-}
-
-.navLogo{
-    display: flex;
-    align-items: center;
-    gap: 10px;
-    color: white;
-}
-
-.navLogo p{
-    color: rgb(231, 152, 5);
-    font-size: 38px;
-    font-weight: 600;
-}
-
-.navMenu{
-    display:flex;
-    align-items: center;
-    list-style: none;
-    gap: 50px;
-    color: #626262;
-    font-size: 20px;
-    font-weight: 500;
-
-}
-
-.navMenu li{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    gap: 3px;
-    cursor: pointer;
-    color: bisque;
-}
-
-
-.box1{
+.box1 {
     padding: 25px;
     align-items: center;
     justify-content: center;
     width: 100%;
     display: flex;
     flex-direction: column;
-    background-color:bisque
+    background-color: bisque;
 }
 
-.box1 h1{
-    color:rgb(14, 14, 83) ;
+.box1 h1 {
+    color: rgb(14, 14, 83);
     font-weight: 600;
     font-size: 40px;
     margin-top: 20px;
 }
 
-.box1 p{
+.box1 p {
     color: rgb(14, 14, 83);
 }
 
-.bookNow{
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        margin-top: 30px;
-        margin-bottom: 10px;
-        width:150px; 
-        height: 45px;
-        color: white;
-        background-color:rgb(255, 136, 0);
-        border-radius: 100px;
-        font-size: 16px;
-        font-weight: 600;
-        cursor: pointer;
+.bookNow {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-top: 30px;
+    margin-bottom: 10px;
+    width: 150px;
+    height: 45px;
+    color: white;
+    background-color: rgb(255, 136, 0);
+    border-radius: 100px;
+    font-size: 16px;
+    font-weight: 600;
+    cursor: pointer;
 }
-
 
 .ourQuality ul {
     display: flex;
@@ -96,9 +49,6 @@ body {
     gap: 50%;
     margin-top: 20px;
     padding: 20px;
-    
-    
-    /* Adjust the gap as needed */
 }
 
 .ourQuality li {
@@ -115,9 +65,7 @@ body {
 
 .ourQuality li .icon {
     font-size: 32px;
-    /* Adjust icon size */
     color: rgb(231, 152, 5);
-    /* Icon color */
 }
 
 .ourQuality {
@@ -138,51 +86,105 @@ body {
     width: 250px;
     height: 250px;
     margin: 25px;
-    /* Adjust width as needed */
     padding: 20px;
     background-color: #fff;
-    /* Example background color */
     border: 1px solid #ccc;
-    /* Example border */
     border-radius: 8px;
-    /* Example border radius */
 }
 
 .qualityBox .icon {
     font-size: 70px;
     color: rgb(231, 152, 5);
-    /* Icon color */
 }
 
 .qualityBox p {
     color: rgb(14, 14, 83);
-    /* Text color */
     font-size: 18px;
     font-weight: 500;
 }
 
+.serviceImages {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 20px;
+    padding: 20px;
+    margin-top: 50px;
+}
 
-.box2{
-    padding: 25px;
-        align-items: center;
-        justify-content: center;
-        width: 100%;
-        display: flex;
-        flex-direction: column;
+.imageContainer {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.imageContainer img {
+    width: 200px;
+    margin: 30px;
+    height: auto;
 
 }
 
-.box3{
+.box2 {
     padding: 25px;
-        align-items: center;
-        justify-content: center;
-        width: 100%;
-        display: flex;
-        flex-direction: column;
-        background-color: bisque;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
 }
 
-.box4{
+
+.WhatWeDo {
+    padding: 30px;
+    text-align: center;
+}
+
+.WhatWeDo h3 {
+    font-size: 35px;
+}
+
+.workList {
+    justify-content: center;
+    text-align: center;
+}
+
+.workList ul {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    gap: 20px;
+    margin-top: 20px;
+    padding: 20px;
+}
+
+.workList li {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    gap: 5px;
+    color: #626262;
+    font-size: 16px;
+    font-weight: 500;
+    padding: 15px;
+    border: 2px solid #e27909;
+    border-radius: 8px;
+}
+
+
+
+.box3 {
+    padding: 25px;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    background-color: bisque;
+}
+
+.box4 {
     padding: 25px;
     align-items: center;
     justify-content: center;
@@ -190,6 +192,34 @@ body {
     display: flex;
     flex-direction: column;
     background: rgb(7, 7, 57);
-    
-        
 }
+
+.WhyChooseUs{
+    justify-content: center;
+}
+
+.WhyChooseUs h1{
+    font-size: 35px;
+    padding: 20px;
+}
+
+.whyUsList ul{
+    display: flex;
+    flex-direction: column;
+
+
+}
+
+.whyUsList li {
+
+}
+
+.contactUs{
+    /* margin-right: 500px; */
+    margin-top: 20px;
+}
+
+/* .socialHandles{
+    margin-left: 500px;
+        margin-bottom: 20px;
+} */
