--- a/client/src/components/login/Login.css
+++ b/client/src/components/login/Login.css
@@ -24,7 +24,7 @@ html,body {
     align-items: center;
     width: 100%;
     /* height: 100vh; */
-    max-width: 1400px;
+    /* max-width: 1400px; */
     margin: 0;
     padding: 20px;
     flex-wrap: wrap;
