--- a/client/src/components/home/HomePage.css
+++ b/client/src/components/home/HomePage.css
@@ -1,7 +1,7 @@
 body {
-  margin: 0;
-  padding: 0;
-  font-family: Arial, sans-serif;
+    margin: 0;
+    padding: 0;
+    font-family: Arial, sans-serif;
 }
 
 .box1 {
@@ -27,6 +27,7 @@ body {
 
 .bookNow {
     display: flex;
+    text-decoration: none;
     justify-content: center;
     align-items: center;
     margin-top: 30px;
@@ -41,39 +42,17 @@ body {
     cursor: pointer;
 }
 
-.ourQuality ul {
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    align-items: center;
-    gap: 50%;
-    margin-top: 20px;
-    padding: 20px;
-}
-
-.ourQuality li {
-  display: inline;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  gap: 5px;
-  color: #626262;
-  font-size: 16px;
-  font-weight: 500;
-}
-
-.ourQuality li .icon {
-    font-size: 32px;
-    color: rgb(231, 152, 5);
+.bookNow:hover {
+    background-color: rgb(255, 115, 0);
+    color: rgb(14, 14, 83);
 }
 
 .ourQuality {
-  display: flex;
-  justify-content: space-around;
-  align-items: center;
-  margin-top: 20px;
-  padding: 20px;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    margin-top: 20px;
+    padding: 20px;
 }
 
 .qualityBox {
@@ -92,12 +71,11 @@ body {
     border-radius: 8px;
 }
 
-
-
-.icons{
+.icons {
     color: rgb(231, 152, 5);
     font-size: 70px;
 }
+
 .qualityBox p {
     color: rgb(14, 14, 83);
     font-size: 18px;
@@ -118,13 +96,13 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
+    flex-wrap: wrap;
 }
 
 .imageContainer img {
     width: 200px;
     margin: 30px;
     height: auto;
-
 }
 
 .box2 {
@@ -137,16 +115,14 @@ body {
     background-color: #fff;
 }
 
-
 .WhatWeDo {
     padding: 30px;
     text-align: center;
-    
 }
 
 .WhatWeDo h3 {
     font-size: 35px;
-    color: rgb(14, 14, 83);;
+    color: rgb(14, 14, 83);
 }
 
 .workList {
@@ -177,8 +153,6 @@ body {
     border-radius: 8px;
 }
 
-
-
 .box3 {
     padding: 25px;
     align-items: center;
@@ -199,35 +173,127 @@ body {
     background: rgb(7, 7, 57);
 }
 
-.WhyChooseUs{
+.WhyChooseUs {
     justify-content: center;
 }
 
-.WhyChooseUs h1{
+.WhyChooseUs h1 {
     font-size: 35px;
     padding: 20px;
-    color: rgb(14, 14, 83);;
+    color: rgb(14, 14, 83);
 }
 
-.whyUsList ul{
+.whyUsList ul {
     display: flex;
     flex-direction: column;
     padding-left: 15%;
-
-
 }
 
-.bookNow2{
+.bookNow2 {
     padding-left: 23%;
 }
 
-.contactUs{
-    /* margin-right: 500px; */
+.contactUs {
     margin-top: 20px;
-    color:#e27909;
+    color: #e27909;
 }
 
-/* .socialHandles{
-    margin-left: 500px;
-        margin-bottom: 20px;
-} */
+@media (max-width: 768px) {
+
+    .qualityBox,
+    .workList li {
+        width: 100%;
+    }
+
+    .imageContainer img {
+        width: 100%;
+        margin: 10px 0;
+    }
+
+    .qualityBox {
+        margin: 10px 0;
+    }
+
+    .WhatWeDo h3 {
+        font-size: 28px;
+    }
+
+    .WhatWeDo,
+    .WhyChooseUs,
+    .contactUs {
+        padding: 20px;
+    }
+
+    .bookNow {
+        width: 120px;
+        height: 40px;
+        font-size: 14px;
+    }
+
+    .bookNow2 {
+        padding-left: 0;
+    }
+
+    .ourQuality {
+        flex-direction: column;
+        gap: 20px;
+    }
+
+    .serviceImages {
+        flex-direction: column;
+        gap: 10px;
+    }
+
+    .whyUsList ul {
+        padding-left: 5%;
+    }
+}
+
+@media (max-width: 480px) {
+    .box1 h1 {
+        font-size: 32px;
+    }
+
+    .bookNow {
+        width: 100px;
+        height: 35px;
+        font-size: 12px;
+    }
+
+    .WhatWeDo h3,
+    .WhyChooseUs h1 {
+        font-size: 24px;
+    }
+
+    .qualityBox,
+    .workList li {
+        width: 100%;
+        margin: 10px 0;
+    }
+
+    .imageContainer img {
+        width: 100%;
+        margin: 5px 0;
+    }
+
+    .qualityBox {
+        gap: 10px;
+        text-align: center;
+    }
+
+    .ourQuality {
+        gap: 10px;
+    }
+
+    .serviceImages {
+        gap: 10px;
+    }
+
+    .whyUsList ul {
+        padding-left: 0;
+    }
+
+    .bookNow2 {
+        padding-left: 0;
+    }
+}
