--- a/client/src/components/Admin/AdminParts/AdminPartDetails.css
+++ b/client/src/components/Admin/AdminParts/AdminPartDetails.css
@@ -1,9 +1,17 @@
+
+body{
+    background-color: #f9f9f9;
+    width: 100%;
+    height: 1000px;
+}
+
 .part-details {
     padding: 20px;
     background-color: #f9f9f9;
     display: flex;
     flex-direction: column;
     align-items: center;
+   
 }
 
 /* Image upload box with a plus sign */
@@ -54,7 +62,7 @@
 
 .part-details button {
     padding: 10px 20px;
-    background-color: #28a745;
+    background-color: rgb(255, 136, 0);
     color: white;
     border: none;
     border-radius: 5px;
@@ -63,7 +71,7 @@
 }
 
 .part-details button:hover {
-    background-color: #218838;
+    background-color: rgb(255, 136, 0);
 }
 
 .cancel-button {
