--- a/client/src/components/Admin/AdminSidebar/AdminSidebar.css
+++ b/client/src/components/Admin/AdminSidebar/AdminSidebar.css
@@ -3,6 +3,8 @@
     background-color: rgb(7, 7, 57);
     color: white;
     height: 100vh;
+    position: fixed;
+    
 }
 
 .admin-sidebar ul li {
