--- a/client/src/components/Admin/AdminParts/AdminPartDetails.css
+++ b/client/src/components/Admin/AdminParts/AdminPartDetails.css
@@ -1,16 +1,19 @@
 
 body{
-    background-color: #f9f9f9;
+    /* background-color: #f9f9f9; */
     width: 100%;
-    height: 1000px;
+    height: 100%;
+    /* align-content: center; */
 }
 
-.part-details {
+.admin-part-details{
     padding: 20px;
-    background-color: #f9f9f9;
+    background-color: white;
     display: flex;
     flex-direction: column;
     align-items: center;
+    /* width: 100%;
+    height: 100%; */
    
 }
 
@@ -39,9 +42,9 @@ body{
 }
 
 /* Input, textarea, and select styles */
-.part-details input,
-.part-details textarea,
-.part-details select {
+.admin-part-details input,
+.admin-part-details textarea,
+.admin-part-details select {
     display: block;
     margin-bottom: 15px;
     padding: 10px;
@@ -60,7 +63,7 @@ body{
     /* Space between the buttons */
 }
 
-.part-details button {
+.admin-part-details button {
     padding: 10px 20px;
     background-color: rgb(255, 136, 0);
     color: white;
@@ -70,7 +73,7 @@ body{
     flex: 1;
 }
 
-.part-details button:hover {
+.admin-part-details button:hover {
     background-color: rgb(255, 136, 0);
 }
 
@@ -85,9 +88,9 @@ body{
 /* Responsive styles for smaller screens */
 @media (max-width: 768px) {
 
-    .part-details input,
-    .part-details textarea,
-    .part-details select {
+    .admin-part-details input,
+    .admin-part-details textarea,
+    .admin-part-details select {
         width: 90%;
     }
 
