--- a/client/src/components/login/Login.css
+++ b/client/src/components/login/Login.css
@@ -7,7 +7,7 @@
 html,
 body {
     font-family: Arial, sans-serif;
-    background-color: rgb(14, 14, 83);
+    background-color: rgb(14, 14, 83) !important;
     height: 100%;
     display: flex;
     flex-direction: column;
