--- a/client/src/components/Admin/AdminParts/AdminPartDetails.css
+++ b/client/src/components/Admin/AdminParts/AdminPartDetails.css
@@ -1,10 +1,10 @@
 
-body{
+/* body{
     /* background-color: #f9f9f9; */
-    width: 100%;
-    height: 100%;
+    /* width: 100%; */
+    /* height: 100%; */
     /* align-content: center; */
-}
+/* } */ 
 
 .admin-part-details{
     padding: 20px;
