--- a/client/src/components/Admin/AdminOrderManagement/AdminOrderManagement.css
+++ b/client/src/components/Admin/AdminOrderManagement/AdminOrderManagement.css
@@ -1,6 +1,6 @@
 .admin-order-container {
   padding: 20px;
-  background-color: bisque;
+  background-color: #e7f3fe;
   width: calc(100% - 250px);
   /* Adjust width to account for the sidebar */
   margin-left: 250px;
@@ -12,6 +12,7 @@
 
 .admin-order-container h1 {
   color: rgb(14, 14, 83);
+  /* Primary Color */
   margin-bottom: 20px;
   padding-bottom: 20px;
   font-size: 28px;
@@ -20,6 +21,7 @@
 
 .admin-order-item {
   background-color: #fff;
+  /* Neutral Color 1 */
   color: #444;
   padding: 20px;
   margin-bottom: 20px;
@@ -46,17 +48,38 @@
   font-size: 16px;
 }
 
-.admin-order-item select {
+.admin-order-container select {
   padding: 10px;
   margin-top: 10px;
   /* Space above the select element */
   margin-right: 20px;
   border-radius: 4px;
   border: 1px solid #ccc;
+  background-color: #ffffff;
+  /* Neutral Color 1 */
+  color: rgb(14, 14, 83);
+  /* Primary Color for text */
+  transition: border-color 0.3s ease;
+}
+
+.admin-order-container select:focus {
+  border-color: #ff8800;
+  /* Accent Color 1 for focus effect */
+  outline: none;
+  /* Remove default outline */
+}
+
+.admin-order-container label {
+  font-weight: bold;
+  color: rgb(14, 14, 83);
+  /* Primary Color for labels */
+  margin-right: 10px;
+  /* Space between label and dropdown */
 }
 
 .admin-order-item button {
   background-color: #ff8c00;
+  /* Accent Color 1 */
   color: white;
   padding: 10px 20px;
   border: none;
@@ -67,8 +90,30 @@
 
 .admin-order-item button:hover {
   background-color: #e67e00;
+  /* Darker shade for hover effect */
 }
 
 #info1 {
   font-weight: bold;
+}
+
+.top-navigation {
+  display: flex;
+  align-items: center;
+  margin-bottom: 20px;
+  /* Space below navigation */
+}
+
+.top-navigation form {
+  display: flex;
+  align-items: center;
+  /* Align form elements */
+}
+
+.pagination {
+  display: flex;
+  justify-content: space-between;
+  /* Space between buttons */
+  margin-top: 20px;
+  /* Space above pagination */
 }
