--- a/client/src/components/ServiceHistory/ServiceHistory.css
+++ b/client/src/components/ServiceHistory/ServiceHistory.css
@@ -1,11 +1,11 @@
 /* General Styles */
-.OH-order-history-page {
+.SH-service-history-page {
     font-family: Arial, sans-serif;
     background-color: #f4f4f4;
     /* padding: 20px; */
 }
 
-.OH-order-history-container {
+.SH-service-history-container {
     /* max-width: 800px; */
     margin: auto;
     background: white;
@@ -14,58 +14,36 @@
     padding: 20px;
 }
 
-.OH-order-history-list {
+.SH-service-history-list {
     list-style: none;
     padding: 0;
 }
 
-.OH-order-card {
-    display: flex;
+.SH-service-card {
     background: #e7f3fe;
-    border-left: 5px solid #22577a ;
+    border-left: 5px solid #22577a;
     border-radius: 4px;
     margin: 15px 0;
     padding: 15px;
     transition: transform 0.2s;
 }
 
-.OH-order-card:hover {
+.SH-service-card:hover {
     transform: scale(1.02);
 }
 
-.OH-part-image {
-    width: 100px;
-    /* Adjust size as needed */
-    height: auto;
-    border-radius: 4px;
-    margin-right: 15px;
-}
-
-.OH-order-details {
-    flex: 1;
-}
-
-.OH-order-details p {
+.SH-service-details p {
     margin: 10px 0;
     color: #333;
 }
 
-.OH-order-details span {
+.SH-service-details span {
     font-weight: bold;
-}
-
-/* Contact Us Styles */
-
-
-.OH-contactUs {
-    background-color: #f1f1f1;
-    padding: 15px;
-    border-radius: 5px;
 }
 
 /* Responsive Styles */
 @media (max-width: 600px) {
-    .OH-order-history-container {
+    .SH-service-history-container {
         padding: 15px;
     }
 }
