--- a/client/src/components/login/Login.css
+++ b/client/src/components/login/Login.css
@@ -7,27 +7,37 @@
 html,
 body {
     font-family: Arial, sans-serif;
-    background-color: rgb(14, 14, 83) !important;
-    height: 100%;
-    display: flex;
-    flex-direction: column;
+    /* background-color: rgb(14, 14, 83) !important; */
+    /* height: 100%; */
+    /* display: flex; */
+    /* flex-direction: column; */
 }
 
 .loginpage {
+    height: 500px;
+    width: 100%;
     display: flex;
     justify-content: center;
     align-items: center;
     flex: 1;
     padding: 20px;
     flex-wrap: wrap;
+    background-color: #e7f3fe;
 }
 
 .leftContainer {
     flex: 1;
-    padding: 20px;
     margin-right: 200px;
     margin-left: 200px;
     justify-content: center;
+    text-align: center;
+    /* Center align the text content */
+    display: flex;
+    /* Use flexbox */
+    flex-direction: column;
+    /* Align content vertically */
+    align-items: center;
+    /* Center align items horizontally */
 }
 
 .leftContainer h1 {
@@ -37,7 +47,7 @@ body {
 
 .leftContainer p {
     font-size: 20px;
-    color: white;
+    color: #22577a;
     margin-top: 10px;
 }
 
