--- a/client/src/components/navbar/navbar.css
+++ b/client/src/components/navbar/navbar.css
@@ -4,10 +4,12 @@
   justify-content: space-between;
   padding: 16px;
   box-shadow: 0 1px 3px -2px black;
+  width: 100%;
   height: 150px;
   background: rgb(7, 7, 57);
   align-items: center;
   flex-wrap: wrap;
+  position: relative;
 }
 
 .navLogo {
@@ -23,12 +25,20 @@
   padding: 20px;
 }
 
+.menu-toggle {
+  display: none;
+  cursor: pointer;
+  font-size: 30px;
+  color: white;
+}
+
 .navMenu {
   display: flex;
   align-items: center;
   list-style: none;
   gap: 50px;
   color: #ec8383;
+  /* Default color for list items */
   font-size: 20px;
   font-weight: 500;
   padding-right: 30px;
@@ -41,20 +51,56 @@
   justify-content: center;
   gap: 3px;
   cursor: pointer;
-  color: bisque;
+  color: white;
+  /* Default color for list items */
+}
+
+.navMenu li a {
+  color: rgb(255, 255, 255);
+  /* Change default color for links */
+  text-decoration: none;
 }
 
 .navMenu li a:hover {
   color: bisque;
+  /* Hover color for links */
 }
 
-.navbar li a {
-  color: white;
-  text-decoration: none;
+.navMenu li:hover {
+  color: bisque;
+  /* Hover color for list items */
 }
 
 .navMenu li a.active {
   text-decoration: underline;
+}
+
+/* Dropdown Styles */
+.dropdown {
+  position: relative;
+}
+
+.dropdown-menu {
+  position: absolute;
+  background: rgb(7, 7, 57);
+  top: 100%;
+  left: 0;
+  z-index: 1;
+  list-style: none;
+  padding: 10px 0;
+  border-radius: 5px;
+  box-shadow: 0 4px 8px rgba(229, 222, 222, 0.1);
+}
+
+.dropdown-menu li {
+  padding: 10px 20px;
+}
+
+.dropdown-menu li a {
+  color: white;
+  /* Color for dropdown links */
+  text-decoration: none;
+  display: block;
 }
 
 /* Responsive Styles */
@@ -79,24 +125,46 @@
     flex-direction: column;
     align-items: flex-start;
     height: auto;
+    position: relative;
+  }
+
+  .menu-toggle {
+    display: block;
   }
 
   .navLogo {
     width: 100%;
-    justify-content: center;
+    justify-content: space-between;
   }
 
   .navMenu {
+    display: none;
     flex-direction: column;
     gap: 20px;
     width: 100%;
     align-items: flex-start;
     padding-right: 0;
+    background: rgb(7, 7, 57);
+    padding: 10px 0;
+    position: absolute;
+    top: 100px;
+    left: 0;
+    z-index: 1000;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
+  }
+
+  .navMenu.show-menu {
+    display: flex;
   }
 
   .navMenu li {
     width: 100%;
     text-align: center;
+    padding: 10px 0;
+  }
+
+  .navbar.menu-open .navLogo h2 {
+    color: rgb(255, 136, 0);
   }
 }
 
